Dockerize the application